--- a/cdn/index.html
+++ b/cdn/index.html
@@ -1,25 +1,26 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Lyne Design Tokens CDN</title>
+  </head>
+  <body>
+    <h1>CDN for Lyne Design Tokens</h1>
 
-  <!DOCTYPE html>
-  <html lang="en" dir="ltr">
-    <head>
-      <meta charset="utf-8">
-      <title>Lyne Design Tokens CDN</title>
-    </head>
-    <body>
-      <h1>CDN for Lyne Design Tokens</h1>
+    <p>Every release has a folder containing a file with all the design token declarations.</p>
 
-      <p>Every release has a folder containing a file with all the design token declarations.</p>
+    <p>
+      There is a JSON-File containing all the versions along with the corresponding urls to the
+      tokens.json file: <a href="/tokens.json">tokens.json</a>
+    </p>
 
-      <p>There is a JSON-File containing all the versions along with the corresponding urls to the tokens.json file: <a href="/tokens.json">tokens.json</a></p>
+    <h2>Directories</h2>
 
-      <h2>Directories</h2>
+    <h3>Latest Release</h3>
+    <p><a href="/tokens.json">tokens.json</a></p>
 
-      <h3>Latest Release</h3>
-      <p><a href="/tokens.json">tokens.json</a></p>
-
-      <h3>Versions</h3>
-      <ul>
-      
+    <h3>Versions</h3>
+    <ul>
       <li>
         <h4>Version 3.21.1</h4>
         <p>Root URL: /versions/3.21.1</p>
@@ -135,8 +136,6 @@
         <p>Root URL: /versions/3.13.1</p>
         <p>Tokens file: <a href="/versions/3.13.1/tokens.json">/versions/3.13.1/tokens.json</a></p>
       </li>
-      </ul>
-
-    </body>
-  </html>
-  
+    </ul>
+  </body>
+</html>
